--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start" : "node api/index.js"
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1"
   }
 }
